force-app/main/default/objects/Review__c.object
<CustomObject>
    <fields>
        <fullName>Alternate_Position__c</fullName>
        <inlineHelpText>Please indicate if there is another position that this candidate may be more suited for.</inlineHelpText>
        <label>Alternate Position</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cultural_Comments__c</fullName>
        <label>Cultural Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cultural_Fit__c</fullName>
        <label>Cultural Fit</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experience_Comments__c</fullName>
        <label>Experience Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer</label>
        <referenceTo>Interviewer__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Leadership_Comments__c</fullName>
        <label>Leadership Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Leadership_Skills__c</fullName>
        <label>Leadership Skills</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Review_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Review Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <formula>(Cultural_Fit__c +  Experience__c +  Leadership_Skills__c +  IF( Recommend_for_Hire__c , 5, 1)) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_Recommended__c</fullName>
        <label>Reason Recommended</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recommend_for_Hire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommend for Hire</label>
        <type>Checkbox</type>
    </fields>
    <label>Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REV-{0000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>